--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
     border-radius: 1rem;
     padding: 2rem;
     text-align: center;
+    position: relative;
 }
 
 .book img{
@@ -40,3 +41,39 @@ body {
     margin-top: 1rem;
     font-size: 1rem;
 }
+
+h1{
+    text-align: center;
+    margin-top: 4rem;
+    text-transform: capitalize;
+}
+button{
+    background: #c35600;
+    color:white ;
+    padding: 0.5rem;
+    border: 2px solid #c35600;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 100%;
+    margin: 0.7rem 0 ;
+
+}
+button:hover{
+    color: #c35600;
+    background: white;
+    transition: background-color ease-in 300ms;
+}
+
+.number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 1rem;
+    padding:0.75rem;
+    border-top-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    background: #c35600;
+    color: #fff;
+}
+
